--- a/src/pages/popup.html
+++ b/src/pages/popup.html
@@ -38,7 +38,7 @@
     </style>
 </head>
 <body>
-    <img src="icon.png" alt="LinkedIn AI Detector Logo" class="logo">
+    <img id="logo-img" class="logo" alt="LinkedIn AI Detector Logo">
     <h2>LinkedIn AI Detector</h2>
     <p id="post-count">Total Posts Detected: 0</p>
 
@@ -50,7 +50,7 @@
 
     <div class="coffee-container">
         <a href="https://buymeacoffee.com/postsmg" target="_blank">
-            <img src="coffee.png" alt="Buy Me a Coffee">
+            <img id="coffee-img" alt="Buy Me a Coffee">
         </a>
     </div>
 
